浏览器缓存

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=26cea06392970f7e7d46",
+    "/css/app.css": "/css/app.css?id=78d6ea93c9c3fe290645"
 }
